fix: css code no wrap

--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,6 @@ pre {
   padding: 20pt;
   margin: 20pt 0;
   border-radius: 3pt;
-  white-space: pre-wrap;
   tab-size: 4;
 }
 
